Set debug to false

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             lat: null,
             lon: null,
             cityName: null,
-            debugMode: true,
+            debugMode: false,
             debugHour: null,
             times: {
                 sunset: null,
