--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            min-height: 100vh;
+            width: 100vw;
+            height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -57,18 +58,21 @@
 
         .container {
             text-align: center;
-            padding: 2rem;
-            max-width: 600px;
-            width: 90%;
+            padding: 1vh 0.5vw;
+            width: 95vw;
+            max-width: 500px;
+            height: 98vh;
             position: relative;
             z-index: 10;
+            display: flex;
+            flex-direction: column;
         }
 
         .celestial-body {
             position: absolute;
             left: 50%;
-            width: 120px;
-            height: 120px;
+            width: min(10vh, 100px);
+            height: min(10vh, 100px);
             border-radius: 50%;
             transform: translateX(-50%);
             transition: all 2s ease;
@@ -77,18 +81,27 @@
 
         #sun {
             background: radial-gradient(circle, #ffd700, #ff8c00);
-            box-shadow: 0 0 80px #ff8c00, 0 0 120px #ff8c00;
+            box-shadow: 0 0 min(6vh, 60px) #ff8c00, 0 0 min(10vh, 100px) #ff8c00;
         }
 
         #moon {
             background: radial-gradient(circle, #f0f0f0, #d0d0d0);
-            box-shadow: 0 0 40px #f0f0f0, 0 0 60px #d0d0d0;
+            box-shadow: 0 0 min(3vh, 30px) #f0f0f0, 0 0 min(5vh, 50px) #d0d0d0;
             opacity: 0;
         }
 
+        .header {
+            flex-shrink: 0;
+            height: 15vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
         h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
+            font-size: min(6vh, 2.5rem);
+            margin-bottom: 1vh;
             background: linear-gradient(135deg, #ffd700, #ff8c00);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -97,35 +110,52 @@
         }
 
         @keyframes glow {
-            from { filter: drop-shadow(0 0 20px rgba(255, 215, 0, 0.5)); }
-            to { filter: drop-shadow(0 0 30px rgba(255, 140, 0, 0.8)); }
+            from { filter: drop-shadow(0 0 min(2vh, 20px) rgba(255, 215, 0, 0.5)); }
+            to { filter: drop-shadow(0 0 min(3vh, 30px) rgba(255, 140, 0, 0.8)); }
         }
 
         .location {
-            font-size: 1.1rem;
-            margin-bottom: 2rem;
+            font-size: min(2.5vh, 1.1rem);
             opacity: 0.8;
+        }
+
+        .content-wrapper {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 0;
+            width: 100%;
         }
 
         .time-cards {
             display: grid;
-            gap: 1.5rem;
-            margin-bottom: 2rem;
+            gap: min(1.5vh, 1rem);
+            width: 100%;
+            height: 100%;
+            align-content: center;
         }
 
         .time-card {
             background: rgba(255, 255, 255, 0.05);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 16px;
-            padding: 1.5rem;
+            border-radius: min(2vh, 16px);
+            padding: min(1.5vh, 1rem);
             transition: all 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: min(18vh, 120px);
+            position: relative;
+            overflow: hidden;
         }
 
         .time-card:hover {
             background: rgba(255, 255, 255, 0.08);
-            transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            transform: translateY(-1px);
+            box-shadow: 0 min(1vh, 10px) min(2vh, 20px) rgba(0, 0, 0, 0.3);
         }
 
         .time-card.passed {
@@ -133,40 +163,47 @@
         }
 
         .time-card h2 {
-            font-size: 1.2rem;
-            margin-bottom: 0.5rem;
+            font-size: min(2.5vh, 1.2rem);
+            margin-bottom: min(0.8vh, 0.4rem);
             color: #ffd700;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .countdown {
-            font-size: 2rem;
+            font-size: min(4vh, 2rem);
             font-weight: bold;
-            margin: 0.5rem 0;
+            margin: min(0.5vh, 0.25rem) 0;
             font-variant-numeric: tabular-nums;
+            line-height: 1;
         }
 
         .exact-time {
-            font-size: 1rem;
+            font-size: min(2vh, 1rem);
             opacity: 0.7;
+            line-height: 1.2;
         }
 
         .loading {
-            font-size: 1.2rem;
+            font-size: min(3vh, 1.2rem);
             opacity: 0.7;
         }
 
         .error {
             color: #ff6b6b;
-            font-size: 1.1rem;
+            font-size: min(2.5vh, 1.1rem);
+            padding: 2vh;
         }
 
         .phase-indicator {
             display: inline-block;
-            width: 12px;
-            height: 12px;
+            width: min(1.5vh, 12px);
+            height: min(1.5vh, 12px);
             border-radius: 50%;
-            margin-right: 8px;
+            margin-right: min(1vh, 8px);
             vertical-align: middle;
+            flex-shrink: 0;
         }
 
         .sunset-phase { background: #ff8c00; }
@@ -176,41 +213,31 @@
 
         .debug-controls {
             position: fixed;
-            bottom: 20px;
+            bottom: 2vh;
             left: 50%;
             transform: translateX(-50%);
             background: rgba(0, 0, 0, 0.8);
-            padding: 15px;
-            border-radius: 10px;
+            padding: min(2vh, 15px);
+            border-radius: min(1.5vh, 10px);
             display: flex;
             align-items: center;
-            gap: 15px;
+            gap: min(2vh, 15px);
             z-index: 100;
+            font-size: min(2vh, 1rem);
         }
 
         .debug-controls label {
-            font-size: 0.9rem;
             opacity: 0.8;
         }
 
         .debug-controls input[type="range"] {
-            width: 200px;
+            width: min(25vh, 200px);
         }
 
         .debug-controls .time-display {
             font-family: monospace;
-            font-size: 1.1rem;
             color: #ffd700;
-            min-width: 50px;
-        }
-
-        @media (max-width: 600px) {
-            h1 { font-size: 2rem; }
-            .countdown { font-size: 1.5rem; }
-            .debug-controls {
-                flex-direction: column;
-                gap: 10px;
-            }
+            min-width: 5ch;
         }
     </style>
 </head>
@@ -224,11 +251,15 @@
     <div class="celestial-body" id="moon"></div>
     
     <div class="container">
-        <h1>Sunlight Tracker</h1>
-        <div class="location" id="location">Detecting location...</div>
+        <div class="header">
+            <h1>Sunlight Tracker</h1>
+            <div class="location" id="location">Detecting location...</div>
+        </div>
         
-        <div id="content">
-            <div class="loading">Calculating sun times...</div>
+        <div class="content-wrapper">
+            <div id="content" style="width: 100%;">
+                <div class="loading">Calculating sun times...</div>
+            </div>
         </div>
     </div>
 
@@ -488,7 +519,7 @@
             // Update sun color based on position
             if (untilSunset > 0 && untilSunset <= 60) {
                 sun.style.background = 'radial-gradient(circle, #ff8c00, #ff6347)';
-                sun.style.boxShadow = '0 0 60px #ff6347, 0 0 100px #ff6347';
+                sun.style.boxShadow = `0 0 min(5vh, 50px) #ff6347, 0 0 min(8vh, 80px) #ff6347`;
             }
         }
 
