--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         .container {
             text-align: center;
-            padding: 1vh 1vw;
+			padding: 0 0 3vh 0;
             width: 95vw;
             max-width: 500px;
             height: 95vh;
